<resources>
    <string name="app_name">TokoOnline</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_home">Toko Online</string>
    <string name="lbl_Detail">Detail</string>
    <string name="lbl_username_password_salah">Username atau Password salah</string>
    <string name="lbl_price">$ %1$s</string>
    <string name="lbl_code_500">Terjadi Kesalaha di Server</string>
    <string name="lbl_lorem_ipsum">Maecenas lobortis tellus convallis elementum efficitur. Donec mattis erat a maximus blandit. Morbi ultricies, risus eget ultrices tincidunt, turpis tellus rutrum augue, efficitur feugiat nibh purus in tortor. Nullam erat ex, dictum in luctus ac, consequat sed felis. Cras sagittis, purus vel gravida egestas, mauris magna elementum velit, ut viverra eros urna in mi. Nam tempus at leo eu pulvinar. Etiam vestibulum luctus diam a posuere. Nullam non odio rhoncus, vestibulum lectus sit amet, vehicula elit. In vel pulvinar enim. Proin quis lectus purus. Quisque orci nisi, pharetra sed cursus sed, sodales vel augue. Sed tristique dolor malesuada sapien pharetra cursus.
        Nulla ultricies tempus leo, id posuere arcu eleifend lobortis. Maecenas sollicitudin tincidunt dui quis faucibus. Vestibulum tempor feugiat odio, vel tincidunt elit pellentesque nec. Aenean in risus metus. Sed nec eleifend leo. Nunc nisi nulla, lacinia non ligula non, ullamcorper posuere metus. Morbi a massa eget augue faucibus aliquet vel nec dolor. Etiam maximus nec arcu et tempus. Integer erat ipsum, malesuada sed ornare eget, laoreet sed ante. Donec fermentum rhoncus elit, in mollis mi laoreet sed. Donec nec purus nisi. In hendrerit erat in dolor eleifend, sagittis elementum nunc sollicitudin.
        Donec bibendum gravida tempus. In congue ac justo ut commodo. Sed ornare lectus tortor, quis aliquet diam posuere et. Phasellus tincidunt ut ipsum nec tempor. Aenean ultrices ligula vitae vestibulum tempus. In sit amet felis dui. Sed sed semper ligula, sed finibus tortor.
        Vestibulum rutrum tellus ut sodales malesuada. Integer lobortis velit nulla, vel semper magna vehicula at. Pellentesque sit amet velit vel ligula porta dictum et at lacus. Cras eu rutrum urna. Praesent consectetur commodo nunc vitae lacinia. In tristique faucibus volutpat. Vestibulum pretium et lorem nec venenatis. Mauris luctus odio a pretium tincidunt. Donec bibendum, ante ut auctor condimentum, tellus arcu egestas eros, vitae congue massa orci non urna.</string>
    <string name="lbl_tambah">Tambah</string>
    <string name="lbl_action">Action</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_add_to_cart">Add To Cart</string>
    <string name="lbl_warning_amount">Please Insert The Amount</string>
</resources>