<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_login"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutUsername"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        style="@style/TextInputLayout"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_username"
            android:maxLines="1"
            android:inputType="text"
            tools:text="johndoe"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        app:endIconMode="password_toggle"
        style="@style/TextInputLayout"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.yudha.tokoonline.widget.ButtonLoading
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_login"
        app:ietStyle="senary"
        android:textAllCaps="true"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_below="@id/layoutPassword"/>

</androidx.appcompat.widget.LinearLayoutCompat>